# QEnPlayer

./: .gitignore  CMakeLists.txt  integration_test.sh  run_with_debug.sh  test_recognition.sh  test_recognizer.cpp  test_recognizer.pro
forms/: mainwindow.ui  playbackwindow.ui  settingsdialog.ui
include/: mainwindow.h  playbackwindow.h  settingsdialog.h  settingsmanager.h  speechrecognizer.h
src/: main.cpp  mainwindow.cpp  playbackwindow.cpp  settingsdialog.cpp  settingsmanager.cpp  speechrecognizer.cpp
whisper/: download.py
whisper_backup/: requirements.txt
